resources/scss/pages/home.scss
@use "sass:math";
@import "../base/mixins";
@import "../base/variables";

.main {
    padding-top: 72px;

    // .main-cards
    &-cards {
        display: grid;
        grid-template-columns: repeat(auto-fit, minmax(240px, 1fr));
        grid-gap: percent(80, 1440);

        @media (max-width: $laptop) {
            grid-template-columns: repeat(auto-fit, minmax(120px, 1fr));
        }

        @media (max-width: $mobile) {
            grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
        }
    }

    // .main-cards__card
    &-cards__card {
        background-color: #fff;
        border-radius: 8px;

        & > a {
            display: flex;
            flex-direction: column;
            align-items: center;
            padding: 42px 16px;
            gap: 20px;
            line-height: 19px;
        }

        @media (max-width: $laptop) {
            // .main-cards__card-icon
            &-icon {
                height: 70px;
            }
        }

        // .main-cards__card-text
        &-text {
            font-family: "Inter-SemiBold";
            font-size: 16px;
            line-height: 19px;
            text-align: center;

            @media (max-width: $laptop) {
                font-size: 14px;
            }
        }
    }

    // .main-about-me
    &-about-me {
        margin-top: 52px;
        display: flex;
        background-color: #fff;
        padding: 27px 27px 29px 27px;
        gap: 25px;
        align-items: center;
        border-radius: 4px;

        @media (max-width: $mobile) {
            flex-direction: column;
        }

        // .main-about-me__content-heading
        &__content-heading {
            font-family: "Inter-SemiBold";
            margin-bottom: 25px;
        }
    }

    // .main-questions
    &-questions {
        display: grid;
        grid-template-columns: repeat(auto-fit, minmax(360px, 1fr));
        grid-gap: 24px;
        grid-column-gap: 63px;
        align-items: center;
        margin-top: 52px;
    }

    // .main-questions__question
    &-questions__question {
        display: flex;
        gap: 20px;
        align-items: center;
        background-color: #fff;
        padding: 21px 16px;
        height: 100px;
        border-radius: 8px;

        // .main-questions__question > a
        & > a {
            display: flex;
            gap: 20px;
            align-items: center;
        }

        // .main-questions__question-text
        &-text {
            font-size: 16px;
            line-height: 19px;
        }

        // .main-questions__question:last-child
        &:last-child {
            justify-content: center;
        }

        // .main-questions__question-button
        &-button {
            background-color: #3D9DF7;
            padding: 8px 32px;
            border-radius: 8px;
            color: #fff;
            font-size: 16px;
            font-family: "Inter-SemiBold";
        }
    }
}

